--- a/metricbeat/values.yaml
+++ b/metricbeat/values.yaml
@@ -244,6 +244,7 @@ clusterRoleRules:
       - namespaces
       - events
       - pods
+      - services
     verbs: ["get", "list", "watch"]
   - apiGroups: ["extensions"]
     resources:
@@ -259,6 +260,10 @@ clusterRoleRules:
     resources:
       - nodes/stats
     verbs: ["get"]
+  - apiGroups: ["batch"]
+    resources:
+      - jobs
+    verbs: ["get", "list", "watch"]
 
 podAnnotations: {}
 # iam.amazonaws.com/role: es-cluster
